解决跳到拼多多的问题

--- a/app.json
+++ b/app.json
@@ -105,5 +105,8 @@
     "uploadFile": 10000,
     "downloadFile": 10000
   },
-  "debug": true
+  "debug": true,
+  "navigateToMiniProgramAppIdList": [
+    "wx32540bd863b27570"
+  ]
 }
