--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wxf2da843fe3bd9967",
-	"projectname": "newzhangda",
+	"projectname": "zhangdaxiangmu",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
