--- a/app.json
+++ b/app.json
@@ -83,7 +83,7 @@
         "pagePath": "pages/classify/classify",
         "iconPath": "image/new/分类@2x.png",
         "selectedIconPath": "image/new/分类2@2x.png",
-        "text": "发布"
+        "text": "发现"
       },
       {
         "pagePath": "pages/member/member",
