优惠卷的大小，钱包样式，转发

--- a/app.json
+++ b/app.json
@@ -59,7 +59,8 @@
     "pages/mine/memberLevel/memberLevel",
     "pages/mine/fans/fans",
     "pages/mine/systemNew/systemNew",
-    "pages/mine/partner/partner"
+    "pages/mine/partner/partner",
+    "pages/classify/activities/activities"
   ],
   "window": {
     "backgroundTextStyle": "light",
