--- a/app.json
+++ b/app.json
@@ -61,6 +61,7 @@
     "pages/mine/systemNew/systemNew",
     "pages/mine/partner/partner",
     "pages/classify/activities/activities"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -81,7 +82,7 @@
         "text": "首页"
       },
       {
-        "pagePath": "pages/classify/classify",
+        "pagePath": "pages/classify/activities/activities",
         "iconPath": "image/new/分类@2x.png",
         "selectedIconPath": "image/new/分类2@2x.png",
         "text": "发现"
